--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,113 @@
-# IntelliJ IDEA
-/.idea/workspace.xml
-/.idea/vcs.xml
-/.idea/misc.xml
-/.idea/modules.xml
-*.iws
-*.iml
-# Node.js / npm
+# Dependencies
 node_modules/
-package-lock.json
-npm-debug.log
-# Build and distribution
-/dist/
-/build/
-/out/
-# Temporary files
-*.log
-*.tmp
-*.temp
-*.swp
-*.swo
-.DS_Store
-Thumbs.db
-# Environment files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Production builds
+dist/
+build/
+
+# Environment variables
 .env
 .env.local
-.env.development
-.env.production
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
 # Dependency directories
-/bower_components/
-# Cache and compiled files
-*.cache
-*.min.js
-*.min.css
-# Testing and coverage
-/coverage/
-/test-results/
-# Miscellaneous
-*.bak
-*.gho
-*.ori
-*.orig
-*.zip
-*.tar.gz
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
 *.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Local development
+.localdist/
+
+# Дублирующиеся папки с ресурсами (используем только public/)
+font/
+img/map.png
