Change site title from 'Logos Food Cards' to 'Food Delivery'

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "logos-food-cards",
+  "name": "food-delivery",
   "version": "1.0.0",
   "description": "Food cards app with dynamic details pages",
   "scripts": {
